refactor(core): introduce branched request specification pattern, add text embedding capabilities, and migrate to JUnit 5
- Core API Redesign:
  * Refactored `ReactiveLlmClient` to utilize a composition/builder pattern via `newRequest()` and `ClientRequest` branching, replacing the legacy `ChatModule`.
  * Removed deprecated `ExecutionContextSpec`, `ProviderSpec`, and `DefaultExecutionContextSpec` interfaces/classes in favor of domain-separated `ConfigurableChatSpec` and `ConfigurableEmbeddingSpec`.
  * Introduced `LlmProviderRegistry` for dynamic registration and lookup of providers and capabilities.
  * Refactored execution strategies (`LlmProviderExecutor`, `ChatGeneralExecution`, `ChatStreamExecution`, `ChatStructuredExecution`) to align with the new branched request contexts.

- Client Configuration & Capability Separation:
  * Redesigned provider client properties (`*ClientProperties` for OpenAI, Anthropic, Deepseek, and Ollama) to support a hierarchical structure: root-level base URL / certifications, with specialized configuration blocks for `chat` and `embedding` capabilities.
  * Added capability filters (`CHAT`, `EMBEDDING`) to certification profiles to allow profile isolation per execution type.
  * Introduced `LlmEmbeddingProviderDelegate` and `DefaultLlmEmbeddingProvider` to fully support text embedding generation.

- Test Suite Migration & Optimization:
  * Migrated the entire test suite to JUnit 5.
  * Consolidated multiple individual micro-test classes into package-focused unit tests (e.g., `OptionPackageTest`, `MessagePackageTest`, `SpecPackageTest`, `ResponsePackageTest`) to improve run times and structure.
  * Refactored all test assertions to utilize AssertJ.